--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversor de Moedas</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Oswald&family=Poppins:wght@400;500;700&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <img src="./assets/logo.gif" alt="logo-conversor">
+
+    <main>
+        <label>
+            Converter <b>de</b>
+            <select>
+                <option>R$ Real Brasileiro</option>
+            </select>
+
+        </label>
+
+        <label>
+            Converter <b>para</b>
+            <select>
+                <option>US$ Dolar americado</option>
+                <option>€ Euro</option>
+            </select>
+        </label>
+
+        <label>
+            Valor
+            <input placeholder="R$10.000,00">
+        </label>
+
+        <button>Converter</button>
+
+        <section>
+
+            <div>
+                <img src="./assets/real.png" alt="moeda-a-converter">
+                <p>Real</p>
+                <p>R$ 0,00</p>
+            </div>
+
+            <div>
+                <img src="./assets/arrow.png" alt="flecha-conversao">
+            </div>
+
+            <div>
+                <img src="./assets/dolar.png" alt="moeda-convertida">
+                <p>Dolar</p>
+                <p>US$ 0.0</p>
+            </div>
+
+
+        </section>
+
+
+
+    </main>
 </body>
+
 </html>
