--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <img src="./assets/logo.gif" alt="logo-conversor">
+    <img class="logo" src="./assets/logo.gif" alt="logo-conversor">
 
     <main>
         <label>
@@ -42,27 +42,22 @@
 
         <section>
 
-            <div>
+            <div class="currency-box">
                 <img src="./assets/real.png" alt="moeda-a-converter">
-                <p>Real</p>
-                <p>R$ 0,00</p>
+                <p class="currency-text">Real</p>
+                <p class="currency-value">R$ 0,00</p>
             </div>
 
             <div>
-                <img src="./assets/arrow.png" alt="flecha-conversao">
+                <img class="arrow-img" src="./assets/arrow.png" alt="flecha-conversao">
             </div>
 
-            <div>
+            <div class="currency-box">
                 <img src="./assets/dolar.png" alt="moeda-convertida">
-                <p>Dolar</p>
-                <p>US$ 0.0</p>
+                <p class="currency-text">Dolar</p>
+                <p class="currency-value">US$ 0.0</p>
             </div>
-
-
         </section>
-
-
-
     </main>
 </body>
 
