--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Oswald&family=Poppins:wght@400;500;700&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
+    
 </head>
 
 <body>
@@ -27,18 +28,18 @@
 
         <label>
             Converter <b>para</b>
-            <select>
-                <option>US$ Dolar americado</option>
-                <option>€ Euro</option>
+            <select class="currencySelect">
+                <option value="dolar">US$ Dolar americado</option>
+                <option value="euro">€ Euro</option>
             </select>
         </label>
 
         <label>
             Valor
-            <input placeholder="R$10.000,00">
+            <input class="input-currency" placeholder="R$10.000,00"> 
         </label>
 
-        <button>Converter</button>
+        <button id="converterButton">Converter</button>
 
         <section>
 
@@ -53,12 +54,12 @@
             </div>
 
             <div class="currency-box">
-                <img src="./assets/dolar.png" alt="moeda-convertida">
-                <p class="currency-text">Dolar</p>
-                <p class="currency-value">US$ 0.0</p>
+                <img class="currencyImg" src="./assets/dolar.png" alt="moeda-convertida">
+                <p class="currency-option">Dolar</p>
+                <p class="currency-value-to-convert">US$ 0.0</p>
             </div>
         </section>
     </main>
 </body>
-
+<script src="./scripts.js"></script>
 </html>
