AJUSTES FINAIS DA PRIMEIRA VERSAO(adicionado libra e bitcoin)

--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
             <select class="currencySelect">
                 <option value="dolar">US$ Dolar americado</option>
                 <option value="euro">€ Euro</option>
+                <option value="libra">£ Libra</option>
+                <option value="bitcoin">₿ Bitcoin</option>
             </select>
         </label>
 
         <label>
             Valor
-            <input class="input-currency" placeholder="R$10.000,00"> 
+            <input class="input-currency" placeholder="Digite aqui o valor a ser convertido"> 
         </label>
 
         <button id="converterButton">Converter</button>
