--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
     <main>
         <label>
             Converter <b>de</b>
-            <select>
-                <option>R$ Real Brasileiro</option>
+            <select class="currencySource">
+                <option value="deReal">R$ Real Brasileiro</option>
+                <option value="deDolar">US$ Dolar americado</option>
+                <option value="deEuro">€ Euro</option>
+                <option value="deLibra">£ Libra</option>
+                <option value="deBitcoin">₿ Bitcoin</option>
             </select>
 
         </label>
@@ -29,6 +33,7 @@
         <label>
             Converter <b>para</b>
             <select class="currencySelect">
+                <option value="real">R$ Real Brasileiro</option>
                 <option value="dolar">US$ Dolar americado</option>
                 <option value="euro">€ Euro</option>
                 <option value="libra">£ Libra</option>
@@ -46,7 +51,7 @@
         <section>
 
             <div class="currency-box">
-                <img src="./assets/real.png" alt="moeda-a-converter">
+                <img class="currencyImgOrigin" src="./assets/real.png" alt="moeda-a-converter">
                 <p class="currency-text">Real</p>
                 <p class="currency-value">R$ 0,00</p>
             </div>
